--- a/any-authenticate-service-impl/src/main/resources/application.yml
+++ b/any-authenticate-service-impl/src/main/resources/application.yml
@@ -6,6 +6,23 @@ logging:
 spring:
   mvc:
     log-request-details: true
+  application:
+    name: any-auth-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/any_db?currentSchema=any_auth
+    username: postgres
+    password: postgres
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL94Dialect
+    hibernate:
+      ddl-auto: none
+    generate-ddl: false
+  liquibase:
+    change-log: classpath:/db/changelog/database_any_auth_changelog.xml
+    liquibase-schema: any_auth
 
 sms:
   center:
