--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,6 @@
         <module>any-authenticate-service-api</module>
         <module>any-authenticate-service-impl</module>
         <module>any-authenticate-service-db</module>
-        <module>any-authenticate-service-model</module>
         <module>any-authenticate-service-lib</module>
     </modules>
 
@@ -39,6 +38,8 @@
         <spring.boot.starter.data.jpa.version>2.5.4</spring.boot.starter.data.jpa.version>
 
         <openapi.version>1.6.9</openapi.version>
+        <liquibase.version>4.6.2</liquibase.version>
+        <postgresql.version>42.4.0</postgresql.version>
         <jjwt.version>0.9.1</jjwt.version>
         <jaxb.api.version>2.4.0-b180830.0359</jaxb.api.version>
         <jakarta.validation.api>2.0.2</jakarta.validation.api>
@@ -57,7 +58,7 @@
             </dependency>
             <dependency>
                 <groupId>ru.any.auth</groupId>
-                <artifactId>any-authenticate-service-model</artifactId>
+                <artifactId>any-authenticate-service-db</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
@@ -91,6 +92,12 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>${jjwt.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>javax.xml.bind</groupId>
@@ -118,6 +125,16 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>${common.lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.liquibase</groupId>
+                <artifactId>liquibase-core</artifactId>
+                <version>${liquibase.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -268,6 +285,12 @@
                             <useTags>true</useTags>
                         </configOptions>
                     </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.liquibase</groupId>
+                    <artifactId>liquibase-maven-plugin</artifactId>
+                    <version>${liquibase.version}</version>
                 </plugin>
             </plugins>
         </pluginManagement>
