--- a/any-authenticate-service-api/pom.xml
+++ b/any-authenticate-service-api/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>ru.any.auth</groupId>
         <artifactId>any-authenticate-service</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
     <artifactId>any-authenticate-service-api</artifactId>
 
