--- a/any-authenticate-service-impl/src/main/resources/application.yml
+++ b/any-authenticate-service-impl/src/main/resources/application.yml
@@ -12,9 +12,9 @@ spring:
   application:
     name: any-auth-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/any_db?currentSchema=any_auth
-    username: postgres
-    password: postgres
+    url: jdbc:postgresql://0.0.0.0:5432/any_db?currentSchema=any_auth
+    username: any_super_user
+    password: admin123
   jpa:
     show-sql: true
     properties:
