--- a/.github/workflows/build_snapshot_maven_artifatct_and_docker_image.yaml
+++ b/.github/workflows/build_snapshot_maven_artifatct_and_docker_image.yaml
@@ -13,13 +13,13 @@ on:
           - warning
           - debug
 
-env:
+#env:
 #  NEW_PATCH_VERSION: $((${{ secrets.PATCH_VERSION }}+1))
-  NEW_PATCH_VERSION: 2
+#  NEW_PATCH_VERSION: 2
 #  BUILD_MINOR_VERSION: ${{ secrets.MINOR_VERSION }}
-  BUILD_MINOR_VERSION: 0
+#  BUILD_MINOR_VERSION: 0
 #  BUILD_MAJOR_VERSION: ${{ secrets.MAJOR_VERSION }}
-  BUILD_MAJOR_VERSION: 0
+#  BUILD_MAJOR_VERSION: 0
 
 jobs:
   log-the-inputs:
@@ -42,6 +42,12 @@ jobs:
 #          echo "Patch version:"
 #          echo ${{ secrets.PATCH_VERSION }} | sed 's/./& /g'
 
+      - name: Set env variables
+        run: |
+          echo "BUILD_MAJOR_VERSION=${{ secrets.MAJOR_VERSION }}" >> $GITHUB_ENV
+          echo "BUILD_MINOR_VERSION=${{ secrets.MINOR_VERSION }}" >> $GITHUB_ENV
+          echo "NEW_PATCH_VERSION=$((${{ secrets.PATCH_VERSION }}+1))" >> $GITHUB_ENV
+
       - name: Show build versions
         run: |
           echo "Major version:"
@@ -59,37 +65,38 @@ jobs:
       #          repository: ikosarim/AnyAuthService
       #          token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
-      - name: Publish maven artifact
-        env:
-          LEVEL: ${{ inputs.logLevel }}
-          SNAPSHOT: ${{ inputs.snapshot }}
-        run: |
-          echo "Log level: $LEVEL"
-          rm -r ~/.m2
-          mkdir ~/.m2
-          mvn versions:set -DnewVersion=${{ env.BUILD_MAJOR_VERSION }}.${{ env.BUILD_MINOR_VERSION}}.${{ env.NEW_PATCH_VERSION }}-SNAPHOT
-          mvn versions:update-child-modules
-          cat pom.xml
-          mvn -e -B -X deploy --settings anySettings.xml -Dmaven.test.skip=true
-
-      - name: Set up QEMU 🏗️
-        uses: docker/setup-qemu-action@v1
-
-      - name: Set up Docker Buildx 🐋
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to JFrog 🐸
-        uses: docker/login-action@v1
-        with:
-          registry: idevelopment.jfrog.io
-          username: igor.kosarim@yandex.ru
-          password: Pass_000_worD
-
-      - name: Build and push 🐳
-        id: docker_build
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          build-args: |
-            maven_build_version=${{ env.BUILD_MAJOR_VERSION }}.${{ env.BUILD_MINOR_VERSION}}.${{ env.NEW_PATCH_VERSION }}-SNAPHOT
-          tags: idevelopment.jfrog.io/any-docker-image/any-authenticate-service:${{ env.BUILD_MAJOR_VERSION }}.${{ env.BUILD_MINOR_VERSION}}.${{ env.NEW_PATCH_VERSION }}-SNAPHOT
+#      - name: Publish maven artifact
+#        env:
+#          LEVEL: ${{ inputs.logLevel }}
+#          SNAPSHOT: ${{ inputs.snapshot }}
+#        run: |
+#          echo "Log level: $LEVEL"
+#          rm -r ~/.m2
+#          mkdir ~/.m2
+#          mvn versions:set -DnewVersion=${{ env.BUILD_MAJOR_VERSION }}.${{ env.BUILD_MINOR_VERSION}}.${{ env.NEW_PATCH_VERSION }}-SNAPSHOT
+#          mvn versions:update-child-modules
+#          cat pom.xml
+#          mvn -e -B -X deploy --settings anySettings.xml -Dmaven.test.skip=true
+#
+#      - name: Set up QEMU 🏗️
+#        uses: docker/setup-qemu-action@v1
+#
+#      - name: Set up Docker Buildx 🐋
+#        uses: docker/setup-buildx-action@v1
+#
+#      - name: Login to JFrog 🐸
+#        uses: docker/login-action@v1
+#        with:
+#          registry: idevelopment.jfrog.io
+#          username: igor.kosarim@yandex.ru
+#          password: Pass_000_worD
+#
+#      - name: Build and push 🐳
+#        id: docker_build
+#        uses: docker/build-push-action@v3
+#        with:
+#          push: true
+#          build-args: |
+#            maven_build_version=${{ env.BUILD_MAJOR_VERSION }}.${{ env.BUILD_MINOR_VERSION}}.$((${{ secrets.PATCH_VERSION }}+1))-SNAPSHOT
+#            maven_build_version_for_image=${{ env.BUILD_MAJOR_VERSION }}.${{ env.BUILD_MINOR_VERSION}}.$((${{ secrets.PATCH_VERSION }}+1))-SNAPSHOT
+#          tags: idevelopment.jfrog.io/any-docker-image/any-authenticate-service:${{ env.BUILD_MAJOR_VERSION }}.${{ env.BUILD_MINOR_VERSION}}.${{ env.NEW_PATCH_VERSION }}-SNAPSHOT
