--- a/any-authenticate-service-impl/src/main/resources/application.yml
+++ b/any-authenticate-service-impl/src/main/resources/application.yml
@@ -12,8 +12,8 @@ spring:
   application:
     name: any-auth-service
   datasource:
-    url: jdbc:postgresql://0.0.0.0:5432/any_db?currentSchema=any_auth
-    username: any_super_user
+    url: jdbc:postgresql://5.23.49.130:5432/default_db?currentSchema=any_auth
+    username: gen_user
     password: admin123
   jpa:
     show-sql: true
