--- a/any-authenticate-service-impl/pom.xml
+++ b/any-authenticate-service-impl/pom.xml
@@ -21,6 +21,10 @@
             <groupId>ru.any.auth</groupId>
             <artifactId>any-authenticate-service-db</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.any.auth</groupId>
+            <artifactId>any-authenticate-service-lib</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -37,10 +41,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
         </dependency>
         <dependency>
             <groupId>javax.xml.bind</groupId>
