--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
                 <artifactId>any-authenticate-service-db</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>ru.any.auth</groupId>
+                <artifactId>any-authenticate-service-lib</artifactId>
+                <version>${project.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
