--- a/deploy/ingress.yaml
+++ b/deploy/ingress.yaml
@@ -2,9 +2,11 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: any-authenticate-service-ingress
+  annotations:
+    kubernetes.io/ingress.class: nginx
 spec:
   rules:
-    - host: "any-authenticate-service.k8saas.timeweb.com"
+    - host: "any-authenticate-service.anyverse.com"
       http:
         paths:
           - pathType: Prefix
